# fl-common

./: .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  gen_proto.ps1  pyproject.toml
.github/workflows/: ci.yml
proto/: model.proto  service.proto
src/: __init__.py  compression.py  encryption.py  model_pb2.py  model_pb2_grpc.py  mqtt_config.py  serializers.py
tests/: __init__.py  test_compression.py  test_encryption.py  test_mqtt_config.py  test_package.py  test_protobuf.py  test_serializers.py
